# pomodoro-bar

./: .ghci  .gitignore  Main.hs  README.md  default.nix  flake.nix  hie.yaml  pomodoro-bar.cabal
nix/: sources.json
src/: Common.hs  PomodoroBar.hs
src/PomodoroBar/: Argument.hs  Display.hs  Record.hs  Session.hs  Time.hs
src/PomodoroBar/Argument/: Option.hs  Parser.hs
src/PomodoroBar/Display/: Bar.hs  Cli.hs  Exception.hs
src/PomodoroBar/Record/: Internal.hs
src/PomodoroBar/Session/: Internal.hs  Timer.hs
src/PomodoroBar/Time/: Day.hs  Second.hs  Week.hs
src/Record/: Date.hs  Record.hs
src/Timer/: Bar.hs  Cli.hs  NamedPipe.hs  Timer.hs  TimerManager.hs
src/TimerDisplay/: Bar.hs  Cli.hs
test/: Main.hs
test/Helper/: Gen.hs  Instance.hs  Misc.hs
test/Module/: PomodoroBar.hs  Record.hs  Session.hs  Timer.hs
test/Module/Time/: Day.hs  Second.hs  Week.hs
