cabal-version:       3.0
name:                pomodoro-bar
version:             0.1.0.0

synopsis:            A feature-rich CLI-based Pomorodo clock with optional integration with external displays: currently polybar and xmobar.
license:             GPL-2.0-only

author:              Theerawat Kiatdarakun
copyright:           Theerawat Kiatdarakun
maintainer:          tkiat@tutanota.com

build-type:          Simple

common common-settings
  default-extensions:   LambdaCase
                      , ViewPatterns

executable pomodoro-bar
  import: common-settings
  main-is:            Main.hs
  default-language:   Haskell2010
  ghc-options:        -threaded -O2
  build-depends:      base
                      , pomodoro-bar


library
  import: common-settings
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     PomodoroBar
                       PomodoroBar.Argument
                       PomodoroBar.Argument.Option
                       PomodoroBar.Argument.Parser
                       PomodoroBar.Display
                       PomodoroBar.Display.Bar
                       PomodoroBar.Display.Cli
                       PomodoroBar.Display.Exception
                       PomodoroBar.Record
                       PomodoroBar.Record.Internal
                       PomodoroBar.Session
                       PomodoroBar.Session.Internal
                       PomodoroBar.Session.Timer
                       PomodoroBar.Time
                       PomodoroBar.Time.Day
                       PomodoroBar.Time.Second
                       PomodoroBar.Time.Week
  ghc-options:         -Wall -Wmissing-export-lists
  build-depends:       base >= 4.11 && < 5
                       , ansi-terminal
                       , aeson
                       , containers
                       , directory
                       , filepath
                       , mtl
                       , optparse-applicative
                       , process
                       , text
                       , time
                       , unix

test-suite pomodoro-bar-tests
  import: common-settings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -Wno-orphans
  build-depends:    base >=4.11 && < 5
                  , pomodoro-bar
                  , aeson
                  , containers
                  , QuickCheck
  other-modules:    Helper.Gen
                  , Helper.Misc
                  , Helper.Instance
                  , Module.PomodoroBar
                  , Module.Session
                  , Module.Timer
                  , Module.Record
                  , Module.Time.Day
                  , Module.Time.Second
                  , Module.Time.Week
